# 1553-Configurator

./: LICENSE  README.md  create_config.py  pyproject.toml
1553_configurator/: bti_1553_hw.py  bti_1553_parameters.py
docs/: project_overview.pu
docs/example configurations/: 1553Config.xlsx
docs/xml-schemas/: bti-1553-hw.pu  bti-1553-hw.xsd  bti-1553-parameters.pu
tests/: test_1553_configurator.py  test_translators.py  test_translators_bti_hardware.py  test_translators_bti_parameters.py  test_vs_1553_configurator.py
vs_1553_configurator/: bti_1553_hw.py  bti_1553_parameters.py  builders.py  readers.py  translators.py  types.py
