[tool.poetry]
name = "VeriStand-1553-Configurator"
version = "0.1.0"
description = ""
authors = ["Matt Jacobson"]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.11"
xsdata = {extras = ["cli", "lxml", "soap"], version = "^22.11"}
pandas = "1.3.5"
openpyxl = "^3.0.10"
black = "^23.3.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
